--- a/practice_02_flex/styles/styles.css
+++ b/practice_02_flex/styles/styles.css
@@ -20,14 +20,35 @@
 
 .box2 {
     background-color: yellow;
+    /*
+    position: absolute;
+    left: -50px;
+    top: 50px;
+    */
 }
 
 .box3 {
     background-color: lightgreen;
+    position: relative;
+    /*
+    position: absolute;
+    top: 400px;
+    */
 }
 
 .redBox {
     width: 50px;
     height: 50px;
     background-color: red;
+    position: absolute;
+}
+
+.leftBlock {
+    top: 20px;
+    left: 20px;
+}
+
+.rightBlock {
+    right: 20px;
+    bottom: 20px;
 }
