--- a/practice_03_flex/styles/styles.css
+++ b/practice_03_flex/styles/styles.css
@@ -7,6 +7,16 @@
 .boxesContainer {
     min-height: 400px;
     border: 1px solid gray;
+
+    display: flex;
+    flex-direction: row;
+    /*justify-content: center;*/ /* 1.2 */
+    /*justify-content: space-between;*/ /* 1.3 */
+    justify-content: space-around;
+    /* align-items: flex-end;*/  /* 1.5 */
+    align-items: center;
+
+    flex-wrap: wrap;
 }
 
 .box {
@@ -17,6 +27,7 @@
 
 .box1 {
     background-color: red;
+    align-self: flex-start;
 }
 
 .box2 {
@@ -25,4 +36,18 @@
 
 .box3 {
     background-color: lightgreen;
+    align-self: flex-end;
+}
+
+.registerForm {
+    width: 455px;
+    height: 455px;
+    padding: 40px;
+    border-radius: 10px;
+    background-color: lightblue;
+    display: flex;
+    flex-direction: column;
+    margin: 30px auto;
+    align-items: center;
+    gap: 10px;
 }
