--- a/practice_04_flex_advanced/styles/styles.css
+++ b/practice_04_flex_advanced/styles/styles.css
@@ -7,12 +7,14 @@
 .boxesContainer {
     border: 1px solid gray;
     display: flex;
+    width: 700px;
 }
 
 .box {
-    width: 300px;
     height: 300px;
     border: 1px solid black;
+    flex-basis: 300px;
+    flex-shrink: 0;
 }
 
 .box1 {
@@ -21,10 +23,12 @@
 
 .box2 {
     background-color: yellow;
+    flex-shrink: 1;
 }
 
 .box3 {
     background-color: lightgreen;
+    flex-shrink: 1;
 }
 
 .registerForm {
@@ -37,5 +41,11 @@
     flex-direction: column;
     margin: 30px auto;
     align-items: center;
+    gap: 10px;
+}
+
+.formRow {
+    display: flex;
+    width: 100%;
     gap: 10px;
 }
