--- a/practice_05_grid/styles/styles.css
+++ b/practice_05_grid/styles/styles.css
@@ -10,12 +10,11 @@ img {
 
 .box {
     border: 1px solid black;
-    height: 300px;
+    /*height: 200px;*/
     display: flex;
     color: white;
     justify-content: center;
     align-items: center;
-    width: 100%;
 }
 
 .box1 {
@@ -24,10 +23,18 @@ img {
 
 .box2 {
     background-color: yellow;
+    /*justify-self: end;
+    align-self: start;*/
+    grid-column: 2 / 4;
+    grid-row: 1 / 3;
+    /*grid-column-start: 2;
+    grid-column-end: 4;*/
 }
 
 .box3 {
     background-color: lightgreen;
+    /*justify-self: start;
+    align-self: end;*/
 }
 
 .box4 {
@@ -52,4 +59,13 @@ img {
 
 .box9 {
     background-color: purple;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 200px);
+    grid-auto-rows: 100px;
+    /*justify-items: center;
+    align-items: center;*/
 }
