--- a/practice_06_grid_advanced/styles/styles.css
+++ b/practice_06_grid_advanced/styles/styles.css
@@ -7,3 +7,72 @@
 img {
     max-width: 100%;
 }
+
+.infoLine {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #FFF;
+}
+
+.intro {
+    background-color: #977357;
+    height: 100vh;
+}
+
+.mainNav {
+    display: flex;
+}
+
+.navList {
+    flex-basis: 50%;
+    list-style: none;
+    display: flex;
+    gap: 18px;
+    padding: 20px 30px;
+}
+
+.primaryList {
+    justify-content: center;
+}
+
+.secondaryList {
+    justify-content: flex-end;
+}
+
+.navList a {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #1A1818;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+}
+
+
+.mainContent {
+    padding: 30px;
+    display: flex;
+    gap: 30px;
+}
+
+.mainContent img {
+    width: 100%;
+}
+
+.mainContentCard {
+    width: 100%;
+}
+
+.mainContentLeft {
+    flex-basis: calc(50% - 15px);
+}
+
+.mainContentRight {
+    flex-basis: calc(50% - 15px);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+}
