--- a/practice_08_css_selectors/styles/styles.css
+++ b/practice_08_css_selectors/styles/styles.css
@@ -107,6 +107,11 @@ img {
     text-transform: uppercase;
 }
 
+.mainContentPrice {
+    display: flex;
+    justify-content: space-between;
+}
+
 .advantagesBlock {
 
 }
