--- a/practice_31_react_useState_useEffect/src/App.css
+++ b/practice_31_react_useState_useEffect/src/App.css
@@ -2,6 +2,25 @@
   text-align: center;
 }
 
+img {
+  max-width: 100%;
+}
+
+.productListContainer {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  padding: 10px;
+}
+
+.productFormContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  max-width: 200px;
+  margin: 0 auto;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
